--- a/notebooks/Modelpipeline.ipynb
+++ b/notebooks/Modelpipeline.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "id": "c1C2zMOPP3CT"
    },
@@ -55,18 +55,18 @@
     "pd.set_option('display.max_columns', None)\n",
     "\n",
     "# Load the data\n",
-    "# df=pd.read_parquet(r'C:\\Users\\alexa\\Downloads\\ProjectCO2--no Github\\Data\\minimal_withoutfc_dupesdropped_frequencies_area_removedskew_outliers3_0_NoW_tn20_mcp00.10.parquet')\n",
+    "df=pd.read_parquet(r'C:\\Users\\alexa\\Downloads\\ProjectCO2--no Github\\Data\\minimal_withoutfc_dupesdropped_frequencies_area_removedskew_outliers3_0_NoW_tn20_mcp00.10.parquet')\n",
     "\n",
     "# Add On to work in g-colab (-> mount drive first, run cell below)\n",
-    "file_name = \"minimal_withoutfc_dupesdropped_frequencies_area_removedskew_outliers3_0_NoW_tn20_mcp00.10.parquet\"\n",
-    "path = \"/content/drive/MyDrive/CO2\"\n",
-    "file_path = path + \"/\" + file_name\n",
-    "df = pd.read_parquet(file_path)"
+    "#file_name = \"minimal_withoutfc_dupesdropped_frequencies_area_removedskew_outliers3_0_NoW_tn20_mcp00.10.parquet\"\n",
+    "#path = \"/content/drive/MyDrive/CO2\"\n",
+    "#file_path = path + \"/\" + file_name\n",
+    "#df = pd.read_parquet(file_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -85,8 +85,8 @@
    ],
    "source": [
     "# Mount Drive if working in g-colab\n",
-    "from google.colab import drive\n",
-    "drive.mount('/content/drive')"
+    "#from google.colab import drive\n",
+    "#drive.mount('/content/drive')"
    ]
   },
   {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -113,8 +113,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best alpha: 0.026865773444595027\n",
-      "Best l1_ratio: 0.9\n",
       "Training MSE: 120.414\n",
       "Test MSE lr2: 120.525\n",
       "Training R2: 0.873\n",
@@ -180,6 +178,35 @@
     "# implies that the model’s performance is consistent across different subsets\n",
     "# and also aligns with the hold-out test set.\n",
     "# This consistency is a sign of a well-balanced model.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LR Elastic Net model saved successfully in the specified path.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Saving the trained model\n",
+    "\n",
+    "import joblib\n",
+    "import os\n",
+    "\n",
+    "# Define the directory path\n",
+    "save_dir = r'C:\\Users\\alexa\\Downloads\\aug24_bds_int---co2\\notebooks\\Saved_models'\n",
+    "\n",
+    "# Save the Elastic Net model\n",
+    "model_path = os.path.join(save_dir, 'LR_elastic_net_model.joblib')\n",
+    "joblib.dump(enet_cv, model_path)\n",
+    "print(\"LR Elastic Net model saved successfully in the specified path.\")\n",
     "\n"
    ]
   },
@@ -861,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -873,6 +900,8 @@
     }
    ],
    "source": [
+    "# Saving the trained model\n",
+    "\n",
     "import os\n",
     "\n",
     "# Define the directory path\n",
