training models and saving trained models

--- a/notebooks/Modelpipeline.ipynb
+++ b/notebooks/Modelpipeline.ipynb
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "id": "Rx7r9oZGP3Co"
    },
@@ -320,7 +320,7 @@
     "pd.set_option('display.max_columns', None)\n",
     "\n",
     "# Load the data\n",
-    "# df=pd.read_parquet(r'C:\\Users\\alexa\\Downloads\\ProjectCO2--no Github\\Data\\minimal_withoutfc_dupesdropped_frequencies_area_removedskew_outliers3_0_NoW_tn20_mcp00.10.parquet')"
+    "df=pd.read_parquet(r'C:\\Users\\alexa\\Downloads\\ProjectCO2--no Github\\Data\\minimal_withoutfc_dupesdropped_frequencies_area_removedskew_outliers3_0_NoW_tn20_mcp00.10.parquet')"
    ]
   },
   {
@@ -338,7 +338,15 @@
    "metadata": {
     "id": "0onH4gbIP3Cr"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 243 candidates, totalling 729 fits\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 1: Prepare the data\n",
     "X = df.drop(columns=['Ewltp (g/km)'])  # Features\n",
@@ -424,9 +432,7 @@
     "# This level of consistency and high performance across folds is a strong\n",
     "# indicator that the model is well-suited to our dataset and problem,\n",
     "# and no immediate further adjustments are needed.\n",
-    "\n",
-    "# [Vic]\n",
-    "# Stoped/aborted after 11 Minutes, no output even verbose = 1\n"
+    "\n"
    ]
   },
   {
@@ -442,6 +448,26 @@
     "- subsample and colsample_bytree: Control the fraction of samples and features used per tree. Smaller values reduce variance and memory load.\n",
     "\n",
     "With this setup, I hope to be able to tune the XGBoost model efficiently within my system's memory limits (16 GB RAM).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Saving the trained model\n",
+    "\n",
+    "import joblib\n",
+    "import os\n",
+    "\n",
+    "# Define the directory path\n",
+    "save_dir = r'C:\\Users\\alexa\\Downloads\\aug24_bds_int---co2\\notebooks\\Saved_models'\n",
+    "\n",
+    "# Save the XGBoost model\n",
+    "model_path = os.path.join(save_dir, 'XG_Boost.joblib')\n",
+    "joblib.dump(xgb_model, model_path)\n",
+    "print(\"XGBoost model saved successfully in the specified path.\")"
    ]
   },
   {
