--- a/notebooks/Modelpipeline.ipynb
+++ b/notebooks/Modelpipeline.ipynb
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "0onH4gbIP3Cr"
    },
@@ -343,7 +343,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 3 folds for each of 243 candidates, totalling 729 fits\n"
+      "Fitting 3 folds for each of 243 candidates, totalling 729 fits\n",
+      "Best Parameters: {'colsample_bytree': 1.0, 'learning_rate': 0.2, 'max_depth': 7, 'n_estimators': 150, 'subsample': 1.0}\n",
+      "Best MSE from Grid Search: 25.216339111328125\n",
+      "Best Model Test MSE: 25.029298782348633\n",
+      "Best Model Test R-squared: 0.9736162424087524\n"
      ]
     }
    ],
@@ -452,9 +456,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XGBoost model saved successfully in the specified path.\n"
+     ]
+    }
+   ],
    "source": [
     "# Saving the trained model\n",
     "\n",
