Comments within the notebook improved/edited

--- a/notebooks/Modelpipeline.ipynb
+++ b/notebooks/Modelpipeline.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "id": "c1C2zMOPP3CT"
    },
@@ -57,6 +57,7 @@
     "# Load the data\n",
     "df=pd.read_parquet(r'C:\\Users\\alexa\\Downloads\\ProjectCO2--no Github\\Data\\minimal_withoutfc_dupesdropped_frequencies_area_removedskew_outliers3_0_NoW_tn20_mcp00.10.parquet')\n",
     "\n",
+    "# [Victor]:\n",
     "# Add On to work in g-colab (-> mount drive first, run cell below)\n",
     "#file_name = \"minimal_withoutfc_dupesdropped_frequencies_area_removedskew_outliers3_0_NoW_tn20_mcp00.10.parquet\"\n",
     "#path = \"/content/drive/MyDrive/CO2\"\n",
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -168,13 +169,14 @@
     "print(f\"Training R2: {train_r2:.3f}\")\n",
     "print(f\"Test R2 lr2: {test_r2_lr2:.3f}\")\n",
     "\n",
-    "# Note: a Cross Validation was here performed too. The results were:\n",
+    "# Note: a Cross Validation was here performed, but excluded from this notebook. \n",
+    "# The results were:\n",
     "# Cross-validated R-squared scores:\n",
     "# [0.85771661 0.85134637 0.89473865 0.89235247 0.89237902]\n",
     "# Mean R-squared across folds: 0.8777066226101098\n",
     "# Standard deviation of R-squared across folds: 0.019049057797127088\n",
     "\n",
-    "# Since both the test R² and cross-validated R² scores are around 0.86-87, it\n",
+    "# Since both the test R² and cross-validated R² scores are 0.87, it\n",
     "# implies that the model’s performance is consistent across different subsets\n",
     "# and also aligns with the hold-out test set.\n",
     "# This consistency is a sign of a well-balanced model.\n",
@@ -285,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "id": "Rx7r9oZGP3Co"
    },
@@ -303,8 +305,6 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "# Linear regression will use python statsmodels library instead of sickit learn\n",
-    "# because the former offers a more comprehensive report\n",
     "import xgboost as xgb\n",
     "from xgboost import XGBRegressor\n",
     "\n",
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "id": "0onH4gbIP3Cr"
    },
@@ -423,7 +423,7 @@
     "# Test R-squared XG: 0.9717583060264587\n",
     "# Not an impressive improvement\n",
     "\n",
-    "# Note: Cross Validation (CV = 5) were also performedUsing the values found via\n",
+    "# Note: Cross Validation (CV = 5) were also performed using the values found via\n",
     "# Grid Search. These were the results:\n",
     "# Cross-validated R-squared scores:\n",
     "# [0.95309782 0.95203137 0.97476494 0.97112    0.95989263]\n",
@@ -449,9 +449,7 @@
     "- n_estimators: Controls the number of boosting rounds. Lower values (50-150) keep memory usage manageable.\n",
     "- max_depth: Depth of each tree. Values of 3, 5, and 7 provide a balance between model complexity and performance.\n",
     "- learning_rate: Step size shrinkage to prevent overfitting. Lower values (0.01-0.2) help maintain model stability.\n",
-    "- subsample and colsample_bytree: Control the fraction of samples and features used per tree. Smaller values reduce variance and memory load.\n",
-    "\n",
-    "With this setup, I hope to be able to tune the XGBoost model efficiently within my system's memory limits (16 GB RAM).\n"
+    "- subsample and colsample_bytree: Control the fraction of samples and features used per tree. Smaller values reduce variance and memory load."
    ]
   },
   {
@@ -996,18 +994,11 @@
     "\n",
     "Initial Decrease: Both training and validation loss decrease significantly in the initial epochs, indicating that the model is learning and improving its performance.\n",
     "Diverging Losses: After a few epochs, the training loss continues to decrease, while the validation loss starts to increase. This is a clear sign of overfitting.\n",
-    "Overfitting: The model is becoming too complex and is starting to memorize the training data rather than learning generalizable patterns. This leads to poor performance on unseen data, as reflected by the increasing validation loss.\n",
+    "** Overfitting: The model is becoming too complex and is starting to memorize the training data rather than learning generalizable patterns. This leads to poor performance on unseen data, as reflected by the increasing validation loss.\n",
     "\n",
     "A well-trained model should ideally have both training and validation loss decreasing and converging to a low value.\n",
     "\n",
-    "Possible Solutions used to address overfitting:\n",
-    "\n",
-    "- Early Stopping: Implement early stopping to stop the training process when the validation loss starts to increase.\n",
-    "- Regularization: Introduce regularization techniques like L1 or L2 regularization to penalize model complexity and prevent overfitting.\n",
-    "- Model Architecture: Experiment with different model architectures, such as using simpler models or adding dropout layers to reduce overfitting.\n",
-    "\n",
-    "**\n",
-    "Two further attempts were made to improve the model aiming to have both training and validation loss decreasing and converging to a low value. Modifications were based on:\n",
+    "Three further attempts were made to improve the model aiming to have both training and validation loss decreasing and converging to a low value. Modifications were based on:\n",
     "\n",
     "- L2 Regularization (Ridge): Added to each dense layer to penalize large weights, which helps control overfitting by encouraging the model to keep weights small.\n",
     "- Increased Dropout: Raised the dropout rate to 0.3 to further reduce overfitting by randomly dropping more neurons during training.\n",
@@ -1015,7 +1006,7 @@
     "But also:\n",
     "-\tIncreasing test size (to 30%) batch size to 32.\n",
     "\n",
-    "Unfortunately, these changes did not improve the model either by significantly increasing the Test-R-squared or by controlling the behavior of the validation loss curve.\n"
+    "These changes did not improve the model either by significantly increasing the Test-R-squared or by controlling the behavior of the validation loss curve.\n"
    ]
   },
   {
