Only small change in the head description of the datapipeline notebook

--- a/notebooks/DataPipeline.ipynb
+++ b/notebooks/DataPipeline.ipynb
@@ -55,41 +55,7 @@
     "* 1.D: Treatment of outliers (explaing why)\n",
     "    * Mean for gaussian like data\n",
     "    * Other technique for non gaussian distributed data\n",
-    "* 1.E: Separation into electric cars and non electric cars (explain why)\n",
-    "\n",
-    "2. Data pipeline for classification models\n",
-    "Prepare data so that it can be used for all basic classification models\n",
-    "\n",
-    "* Loading data which has received the first/main data pipeline\n",
-    "*\n",
-    "*\n",
-    "*\n",
-    "* Separation into train and test data\n",
-    "* Scale data\n",
-    "\n",
-    "3. Data pipeline for regression models\n",
-    "Prepare data so that it can be used for all basic regression models\n",
-    "\n",
-    "* Loading data which has received the first/main data pipeline\n",
-    "*\n",
-    "*\n",
-    "*\n",
-    "* Separation into train and test data\n",
-    "\n",
-    "4. Evaluation with baseline classification models\n",
-    "\n",
-    "* Create different baselin models\n",
-    "* Train models\n",
-    "* Prediction\n",
-    "* Evaluation / Score\n",
-    "\n",
-    "5. Evaluation with baseline regression models\n",
-    "\n",
-    "* Create different baselin models\n",
-    "* Train models\n",
-    "* Prediction\n",
-    "* Evaluation / Score\n",
-    "\n"
+    "* 1.E: Separation into electric cars and non electric cars (explain why)\n"
    ]
   },
   {
