--- a/notebooks/Modelpipeline.ipynb
+++ b/notebooks/Modelpipeline.ipynb
@@ -57,12 +57,12 @@
     "# Load the data\n",
     "df=pd.read_parquet(r'C:\\Users\\alexa\\Downloads\\ProjectCO2--no Github\\Data\\minimal_withoutfc_dupesdropped_frequencies_area_removedskew_outliers3_0_NoW_tn20_mcp00.10.parquet')\n",
     "\n",
-    "# [Victor]:\n",
+    "\n",
     "# Add On to work in g-colab (-> mount drive first, run cell below)\n",
-    "#file_name = \"minimal_withoutfc_dupesdropped_frequencies_area_removedskew_outliers3_0_NoW_tn20_mcp00.10.parquet\"\n",
-    "#path = \"/content/drive/MyDrive/CO2\"\n",
-    "#file_path = path + \"/\" + file_name\n",
-    "#df = pd.read_parquet(file_path)"
+    "# file_name = \"minimal_withoutfc_dupesdropped_frequencies_area_removedskew_outliers3_0_NoW_tn20_mcp00.10.parquet\"\n",
+    "# path = \"/content/drive/MyDrive/CO2\"   # adapt to your req.\n",
+    "# file_path = path + \"/\" + file_name\n",
+    "# df = pd.read_parquet(file_path)"
    ]
   },
   {
@@ -86,8 +86,8 @@
    ],
    "source": [
     "# Mount Drive if working in g-colab\n",
-    "#from google.colab import drive\n",
-    "#drive.mount('/content/drive')"
+    "# from google.colab import drive\n",
+    "# drive.mount('/content/drive')"
    ]
   },
   {
@@ -179,13 +179,12 @@
     "# Since both the test R² and cross-validated R² scores are 0.87, it\n",
     "# implies that the model’s performance is consistent across different subsets\n",
     "# and also aligns with the hold-out test set.\n",
-    "# This consistency is a sign of a well-balanced model.\n",
-    "\n"
+    "# This consistency is a sign of a well-balanced model.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -206,9 +205,10 @@
     "save_dir = r'C:\\Users\\alexa\\Downloads\\aug24_bds_int---co2\\notebooks\\Saved_models'\n",
     "\n",
     "# Save the Elastic Net model\n",
-    "model_path = os.path.join(save_dir, 'LR_elastic_net_model.joblib')\n",
+    "model_path = os.path.join(save_dir, 'LR_elastic_net_model.joblib') # as regression_model.joblib in repo\n",
     "joblib.dump(enet_cv, model_path)\n",
     "print(\"LR Elastic Net model saved successfully in the specified path.\")\n",
+    "\n",
     "\n"
    ]
   },
