--- a/notebooks/Andreas/EU Data_merge all years.ipynb
+++ b/notebooks/Andreas/EU Data_merge all years.ipynb
@@ -145,32 +145,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2010     272279\n",
-       "2011     310767\n",
-       "2012     307442\n",
-       "2013     380634\n",
-       "2014     398047\n",
-       "2015     431559\n",
-       "2016     444106\n",
-       "2017     424145\n",
-       "2018    1240905\n",
-       "2019    2588053\n",
-       "2020    2142188\n",
-       "2021    1887853\n",
-       "2022    1810698\n",
-       "2023    1804116\n",
-       "Name: year, dtype: Int64"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'EU_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Display number of rows per year in merged df (can visually compare to above counts before merge)\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mEU_df\u001b[49m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myear\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mvalue_counts()\u001b[38;5;241m.\u001b[39msort_index()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'EU_df' is not defined"
+     ]
     }
    ],
    "source": [
@@ -194,6 +181,16 @@
    "source": [
     "# Save merged Dataframe\n",
     "EU_df.to_parquet(\"..\\Data\\EU\\EU all.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load dataset\n",
+    "df = pd.read_parquet(\"..\\Data\\EU\\EU all.parquet\")"
    ]
   },
   {
@@ -664,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +790,7 @@
     "# For 'ID' and 'year', handle missing values appropriately and convert to Int64 data type\n",
     "for col in ['ID', 'year']:\n",
     "    df[col] = df[col].replace(-99, np.nan)\n",
-    "    # If you need to handle NaN in integer columns, convert to pandas nullable integer type\n",
+    "    # To handle NaN in integer columns, convert to pandas nullable integer type\n",
     "    df[col] = df[col].astype('Int64')\n",
     "    print(f\"Column '{col}' processed for missing values with Int64 dtype.\")\n",
     "\n",
