--- a/notebooks/DataPipeline.ipynb
+++ b/notebooks/DataPipeline.ipynb
@@ -5199,7 +5199,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.read_parquet(\"..\\\\data\\\\EU\\\\EU_all_current_shared_Mp_Mh_IT8.parquet\")\n",
+    "all_to_nan_and_cat(df, ['IT_valid', 'IT_invalid'])\n",
+    "count_missing_values2(df, ['IT_valid', 'IT_invalid'])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -6480,62 +6484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "id": "oHeJLZb2nMcm",
-    "outputId": "e91fe09d-984b-49bb-f5e3-091f060f6375"
-   },
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import re\n",
-    "\n",
-    "def split_valid_tacs(series):\n",
-    "    \"\"\"\n",
-    "    Splits the 'IT_valid' column into 5 separate columns for each TAC (up to 5 TACs).\n",
-    "    Handles missing values properly and ensures categorical dtype is preserved.\n",
-    "\n",
-    "    Parameters:\n",
-    "    series (pd.Series): The Series containing the combined TAC codes (categorical).\n",
-    "\n",
-    "    Returns:\n",
-    "    pd.DataFrame: A DataFrame with individual TAC columns.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    # Step 0: Define regular expression to match valid 'eXX XX', 'eX XX', 'eX X', 'eXX X' patterns\n",
-    "    valid_pattern = re.compile(r'e\\d{1,2} \\d{1,2}')\n",
-    "\n",
-    "    # Step 1: Convert series from categorical to string for manipulation\n",
-    "    series_str = series.astype(str)\n",
-    "\n",
-    "    # Step 2: Define a function to extract valid TAC codes\n",
-    "    def extract_codes(value):\n",
-    "        if pd.isna(value) or value in ['nan', 'None']:\n",
-    "            return [np.nan] * 5  # Return a list of NaNs\n",
-    "        # Find all valid matches for the pattern\n",
-    "        matches = valid_pattern.findall(value)\n",
-    "        # Pad the list to have exactly 5 elements\n",
-    "        matches += [np.nan] * (5 - len(matches))\n",
-    "        return matches[:5]  # Ensure the list is exactly length 5\n",
-    "\n",
-    "    # Step 3: Apply the extraction function to split the strings into valid components\n",
-    "    split_series = series_str.apply(extract_codes)\n",
-    "\n",
-    "    # Step 4: Convert the list of codes into a DataFrame with 5 columns\n",
-    "    tac_df = pd.DataFrame(split_series.tolist(), columns=[f'IT_{i+1}' for i in range(5)], index=series.index)\n",
-    "\n",
-    "    # Step 5: Convert columns to 'category' dtype\n",
-    "    for col in tac_df.columns:\n",
-    "        tac_df[col] = tac_df[col].astype('category')\n",
-    "\n",
-    "    return tac_df\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -6601,7 +6550,7 @@
     }
    ],
    "source": [
-    "# Apply the function to split the 'IT_valid' column\n",
+    "# Split 'IT_valid' column into 5 separate columns for each TAC (up to 5 TACs)\n",
     "tac_df = split_valid_tacs(df['IT_valid'])\n",
     "\n",
     "# Concatenate the new columns back to the original DataFrame\n",
