--- a/notebooks/DataPipeline.ipynb
+++ b/notebooks/DataPipeline.ipynb
@@ -4706,7 +4706,7 @@
     "id": "CD1ow5VBnMcd"
    },
    "source": [
-    "# **IT, Ernedc, Erwltp**"
+    "## **IT, Ernedc, Erwltp**"
    ]
   },
   {
@@ -6620,7 +6620,7 @@
     "id": "HHa1NeuYnMcn"
    },
    "source": [
-    "# **=== save/read (shared Okt 23)===**"
+    "### save/read"
    ]
   },
   {
@@ -6680,7 +6680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {
     "id": "xxxTPwFrnMcv",
     "outputId": "2f920fbe-4093-44fa-f247-c7d220dfd443"
@@ -6721,7 +6721,7 @@
     }
    ],
    "source": [
-    "# Again, inspect the unique categories in each categorical column\n",
+    "# Again, inspect the unique categories in each categorical column after processing\n",
     "for col in df.select_dtypes(include=['category']):\n",
     "    num_categories = df[col].nunique(dropna=True)\n",
     "    print(f\"Column '{col}' has {num_categories} unique categorical values.\")"
