--- a/notebooks/DataPipeline.ipynb
+++ b/notebooks/DataPipeline.ipynb
@@ -442,7 +442,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## save/load"
+    "### save/load"
    ]
   },
   {
@@ -655,14 +655,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Treat NaN"
+    "## Standardize NaN represantation"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## check Missing/NaN"
+    "### check Missing/NaN"
    ]
   },
   {
@@ -1089,7 +1089,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## convert missing and dtypes"
+    "### convert missing and dtypes"
    ]
   },
   {
@@ -1210,7 +1210,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## check if NaN conversion successfull"
+    "### check if NaN conversion successfull"
    ]
   },
   {
@@ -1639,7 +1639,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## save"
+    "### save"
    ]
   },
   {
